Removed the study part + basic chat part

--- a/public/index.html
+++ b/public/index.html
@@ -21,9 +21,9 @@
       </p>
 
       <form id="participant-form">
-        <label for="participantID">Enter your Participant ID:</label>
+        <label for="participantID">Enter your name:</label>
         <input type="text" id="participantID" name="participantID" required />
-        <button type="submit">Start Chat</button>
+        <button type="submit">Go!</button>
       </form>
     </main>
 
